--- a/RefactoringSwift/Base.lproj/Main.storyboard
+++ b/RefactoringSwift/Base.lproj/Main.storyboard
@@ -48,7 +48,9 @@
                             <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YuE-Ku-dov">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <items>
-                                    <navigationItem title="Change Password" id="MX6-aZ-fry"/>
+                                    <navigationItem title="Change Password" id="MX6-aZ-fry">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="pcs-nY-wCE"/>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                         </subviews>
