Added Password text field with Text Input traits set and placeholder text

--- a/RefactoringSwift/Base.lproj/Main.storyboard
+++ b/RefactoringSwift/Base.lproj/Main.storyboard
@@ -53,11 +53,22 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Current Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="55x-Zd-xHy">
+                                <rect key="frame" x="20" y="108" width="374" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Cqa-Dk-t8m"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hvr-cv-wMo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="YuE-Ku-dov" firstAttribute="top" secondItem="hvr-cv-wMo" secondAttribute="top" id="28S-j6-Rgq"/>
+                            <constraint firstItem="55x-Zd-xHy" firstAttribute="top" secondItem="YuE-Ku-dov" secondAttribute="bottom" constant="20" id="76F-G7-h5i"/>
+                            <constraint firstItem="hvr-cv-wMo" firstAttribute="trailing" secondItem="55x-Zd-xHy" secondAttribute="trailing" constant="20" id="8c3-wO-gCB"/>
+                            <constraint firstItem="55x-Zd-xHy" firstAttribute="leading" secondItem="hvr-cv-wMo" secondAttribute="leading" constant="20" id="ejJ-bV-WYM"/>
                             <constraint firstItem="YuE-Ku-dov" firstAttribute="trailing" secondItem="hvr-cv-wMo" secondAttribute="trailing" id="t87-Lt-QRQ"/>
                             <constraint firstItem="YuE-Ku-dov" firstAttribute="leading" secondItem="hvr-cv-wMo" secondAttribute="leading" id="uQ0-ZY-cY5"/>
                         </constraints>
