--- a/RefactoringSwift/Base.lproj/Main.storyboard
+++ b/RefactoringSwift/Base.lproj/Main.storyboard
@@ -77,6 +77,14 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="new-password"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VOU-xd-jWd">
+                                <rect key="frame" x="20" y="272" width="374" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="6Vg-7W-zfI"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Submit"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="hvr-cv-wMo"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -86,10 +94,13 @@
                             <constraint firstItem="hvr-cv-wMo" firstAttribute="trailing" secondItem="55x-Zd-xHy" secondAttribute="trailing" constant="20" id="8c3-wO-gCB"/>
                             <constraint firstItem="dmV-Ny-IUf" firstAttribute="leading" secondItem="hvr-cv-wMo" secondAttribute="leading" constant="20" id="B7u-xI-XDa"/>
                             <constraint firstItem="hvr-cv-wMo" firstAttribute="trailing" secondItem="dmV-Ny-IUf" secondAttribute="trailing" constant="20" id="GEW-3O-44d"/>
+                            <constraint firstItem="VOU-xd-jWd" firstAttribute="leading" secondItem="hvr-cv-wMo" secondAttribute="leading" constant="20" id="Pvu-WB-tzk"/>
+                            <constraint firstItem="hvr-cv-wMo" firstAttribute="trailing" secondItem="VOU-xd-jWd" secondAttribute="trailing" constant="20" id="Whz-bu-luw"/>
                             <constraint firstItem="dmV-Ny-IUf" firstAttribute="top" secondItem="7D9-JN-3GO" secondAttribute="bottom" constant="8" id="bAq-Yi-PrU"/>
                             <constraint firstItem="7D9-JN-3GO" firstAttribute="top" secondItem="55x-Zd-xHy" secondAttribute="bottom" constant="8" id="dsO-Xc-FsD"/>
                             <constraint firstItem="55x-Zd-xHy" firstAttribute="leading" secondItem="hvr-cv-wMo" secondAttribute="leading" constant="20" id="ejJ-bV-WYM"/>
                             <constraint firstItem="hvr-cv-wMo" firstAttribute="trailing" secondItem="7D9-JN-3GO" secondAttribute="trailing" constant="20" id="ffg-Lc-Yib"/>
+                            <constraint firstItem="VOU-xd-jWd" firstAttribute="top" secondItem="dmV-Ny-IUf" secondAttribute="bottom" constant="16" id="hiN-B8-7aa"/>
                             <constraint firstItem="7D9-JN-3GO" firstAttribute="leading" secondItem="hvr-cv-wMo" secondAttribute="leading" constant="20" id="mI6-94-eNk"/>
                             <constraint firstItem="YuE-Ku-dov" firstAttribute="trailing" secondItem="hvr-cv-wMo" secondAttribute="trailing" id="t87-Lt-QRQ"/>
                             <constraint firstItem="YuE-Ku-dov" firstAttribute="leading" secondItem="hvr-cv-wMo" secondAttribute="leading" id="uQ0-ZY-cY5"/>
