--- a/RefactoringSwift/Base.lproj/Main.storyboard
+++ b/RefactoringSwift/Base.lproj/Main.storyboard
@@ -40,10 +40,10 @@
             </objects>
             <point key="canvasLocation" x="139" y="110"/>
         </scene>
-        <!--View Controller-->
+        <!--Change Password View Controller-->
         <scene sceneID="MGZ-ux-mM7">
             <objects>
-                <viewController id="MMk-fg-UL4" sceneMemberID="viewController">
+                <viewController id="MMk-fg-UL4" customClass="ChangePasswordViewController" customModule="RefactoringSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Nfa-SG-jw4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -109,6 +109,13 @@
                             <constraint firstItem="YuE-Ku-dov" firstAttribute="leading" secondItem="hvr-cv-wMo" secondAttribute="leading" id="uQ0-ZY-cY5"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cancelBarButton" destination="pcs-nY-wCE" id="rlw-g5-clF"/>
+                        <outlet property="confirmPasswordTextField" destination="dmV-Ny-IUf" id="LSe-ck-0GG"/>
+                        <outlet property="newPasswordTextField" destination="7D9-JN-3GO" id="gJj-AT-hlJ"/>
+                        <outlet property="oldPasswordTextField" destination="55x-Zd-xHy" id="nb1-a5-fLB"/>
+                        <outlet property="submitButton" destination="VOU-xd-jWd" id="9XH-Gb-umd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Za-ip-1zT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
